fix spacing issue on style.css that broke deployment
Added styles for unordered lists and blockquotes.

--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@ p {
     margin-bottom: 15px;
 }
 
+ul {
+    margin-bottom: 15px;
+}
+
+blockquote {
+    font-style: italic;
+    text-align: center;
+    margin-top: 20px;
+    color: #63442C;
+}
+
 a {
     color: #63442C;
     text-decoration: none;
